[gd_scene load_steps=14 format=3 uid="uid://bxxnneq5cfaap"]

[ext_resource type="Script" uid="uid://csrnj1h67b6fw" path="res://scripts/red_knight.gd" id="1_2xq65"]
[ext_resource type="Texture2D" uid="uid://wqnj0csnb47a" path="res://gfx/red_knight_sprites.png" id="2_2xq65"]
[ext_resource type="Texture2D" uid="uid://oc00nxuphkmn" path="res://gfx/shadow.png" id="2_vvjdt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvjdt"]
size = Vector2(15, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_2xq65"]
radius = 100.0

[sub_resource type="Animation" id="Animation_lp5xl"]
resource_name = "AttackDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2xq65"]
resource_name = "AttackSide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ayssd"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_f3xpq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5rogq"]
resource_name = "WalkDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 6]
}

[sub_resource type="Animation" id="Animation_4hatm"]
resource_name = "WalkSide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2d452"]
_data = {
&"AttackDown": SubResource("Animation_lp5xl"),
&"AttackSide": SubResource("Animation_2xq65"),
&"Idle": SubResource("Animation_ayssd"),
&"RESET": SubResource("Animation_f3xpq"),
&"WalkDown": SubResource("Animation_5rogq"),
&"WalkSide": SubResource("Animation_4hatm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcbit"]
size = Vector2(24, 24)

[node name="RedKnight" type="CharacterBody2D"]
z_index = 1
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_2xq65")
SPEED = 2000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_2xq65")
hframes = 4
vframes = 8

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
show_behind_parent = true
position = Vector2(0, 2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_vvjdt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.666667)
shape = SubResource("RectangleShape2D_vvjdt")

[node name="Detection Radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Radius"]
shape = SubResource("CircleShape2D_2xq65")
debug_color = Color(0.734964, 0.407219, 0.62035, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2d452")
}

[node name="AttackBox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
shape = SubResource("RectangleShape2D_vcbit")

[connection signal="body_entered" from="Detection Radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="Detection Radius" to="." method="_on_detection_radius_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
